fix: resolve conflict